--- a/frontend/locales/de.json
+++ b/frontend/locales/de.json
@@ -1222,6 +1222,8 @@
     "min_price": "Min",
     "min_rating": "Mindestbewertung",
     "modify_criteria": "Ändern Sie Ihre Suchkriterien",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Preisspanne",
     "products": "Produkte",
     "reset": "Zurücksetzen",
