--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -1222,6 +1222,8 @@
     "min_price": "Min",
     "min_rating": "Min rating",
     "modify_criteria": "Modify your search criteria",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Price range",
     "products": "Products",
     "reset": "Reset",
@@ -1692,27 +1694,27 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "birthdays_desc": "Prévenir X jours avant",
-    "birthdays_label": "Anniversaires clients",
-    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
-    "client_reactivation_label": "Réactivation clients",
-    "debt_recovery_desc": "Dettes clients dépassant le seuil",
-    "debt_recovery_label": "Recouvrement de dettes",
-    "dormant_products_desc": "Produits sans vente depuis X jours",
-    "dormant_products_label": "Produits dormants",
-    "expense_spike_desc": "Alerte si +X% vs mois précédent",
-    "expense_spike_label": "Hausse des dépenses",
-    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
-    "inventory_check_label": "Vérification inventaire",
-    "late_deliveries_desc": "Critique après X jours de retard",
-    "late_deliveries_label": "Livraisons en retard",
-    "monthly_report_desc": "X derniers jours du mois",
-    "monthly_report_label": "Rapport mensuel",
-    "pending_invitations_desc": "En attente depuis X jours",
-    "pending_invitations_label": "Invitations en attente",
-    "replenishment_desc": "Produits sous le stock minimum",
-    "replenishment_label": "Réapprovisionnement",
-    "unit_days": "jours"
+    "birthdays_desc": "Notification for upcoming customer birthdays",
+    "birthdays_label": "Birthdays",
+    "client_reactivation_desc": "Alert if a VIP customer has not returned",
+    "client_reactivation_label": "Client Reactivation",
+    "debt_recovery_desc": "Reminder if a customer debt exceeds an amount",
+    "debt_recovery_label": "Debt Recovery",
+    "dormant_products_desc": "Alert if a product has not been sold for a long time",
+    "dormant_products_label": "Dormant Products",
+    "expense_spike_desc": "Alert if expenses increase abnormally",
+    "expense_spike_label": "Expense Spike",
+    "inventory_check_desc": "Reminder to verify physical stock of a product",
+    "inventory_check_label": "Inventory Count",
+    "late_deliveries_desc": "Alert if a supplier delivery is overdue",
+    "late_deliveries_label": "Late Deliveries",
+    "monthly_report_desc": "Availability of the monthly accounting summary",
+    "monthly_report_label": "Monthly Report",
+    "pending_invitations_desc": "Reminder for unaccepted team invitations",
+    "pending_invitations_label": "Pending Invitations",
+    "replenishment_desc": "Purchase suggestions based on out-of-stock items",
+    "replenishment_label": "Replenishment",
+    "unit_days": "days"
   },
   "settings": {
     "about": "About",
