--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -1184,29 +1184,8 @@
     "terms_title": "Conditions Générales"
   },
   "marketplace": {
-    "all": "Toutes",
-    "apply": "Appliquer",
-    "category": "Catégorie",
-    "city": "Ville",
-    "city_filter": "Filtrer par ville...",
-    "contact": "Contacter",
-    "empty_products": "Aucun produit trouvé",
-    "empty_suppliers": "Aucun fournisseur trouvé",
-    "filters": "Filtres",
-    "max_price": "Max",
-    "min_price": "Min",
-    "min_rating": "Note minimale",
-    "modify_criteria": "Modifiez vos critères de recherche",
-    "price_range": "Gamme de prix",
-    "products": "Produits",
-    "reset": "Réinitialiser",
-    "search_product": "Rechercher un produit...",
-    "search_supplier": "Rechercher un fournisseur...",
-    "send_invitation": "Envoyer invitation",
-    "star": "⭐",
-    "suppliers": "Fournisseurs Marketplace",
-    "title": "Marketplace",
-    "verified_only": "Vérifiés uniquement"
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur"
   },
   "modals": {
     "cancel": "Annuler",
@@ -1626,25 +1605,25 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "birthdays_desc": "Prévenir X jours avant",
-    "birthdays_label": "Anniversaires clients",
-    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
-    "client_reactivation_label": "Réactivation clients",
-    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "birthdays_desc": "Notification pour les anniversaires clients à venir",
+    "birthdays_label": "Anniversaires",
+    "client_reactivation_desc": "Alerte si un client VIP n’est pas revenu",
+    "client_reactivation_label": "Réactivation client",
+    "debt_recovery_desc": "Rappel si la dette d’un client dépasse un montant",
     "debt_recovery_label": "Recouvrement de dettes",
-    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_desc": "Alerte si un produit n’a pas été vendu depuis longtemps",
     "dormant_products_label": "Produits dormants",
-    "expense_spike_desc": "Alerte si +X% vs mois précédent",
-    "expense_spike_label": "Hausse des dépenses",
-    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
-    "inventory_check_label": "Vérification inventaire",
-    "late_deliveries_desc": "Critique après X jours de retard",
-    "late_deliveries_label": "Livraisons en retard",
-    "monthly_report_desc": "X derniers jours du mois",
+    "expense_spike_desc": "Alerte si les charges augmentent anormalement",
+    "expense_spike_label": "Pic de dépenses",
+    "inventory_check_desc": "Rappel pour vérifier le stock physique d’un produit",
+    "inventory_check_label": "Inventaire tournant",
+    "late_deliveries_desc": "Alerte si une livraison fournisseur dépasse le délai",
+    "late_deliveries_label": "Retards de livraison",
+    "monthly_report_desc": "Disponibilité du résumé comptable mensuel",
     "monthly_report_label": "Rapport mensuel",
-    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_desc": "Rappel pour les invitations d’équipe non acceptées",
     "pending_invitations_label": "Invitations en attente",
-    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_desc": "Suggestions d’achat basées sur les ruptures",
     "replenishment_label": "Réapprovisionnement",
     "unit_days": "jours"
   },
