--- a/frontend/locales/hi.json
+++ b/frontend/locales/hi.json
@@ -1222,6 +1222,8 @@
     "min_price": "न्यूनतम",
     "min_rating": "न्यूनतम रेटिंग",
     "modify_criteria": "अपने खोज मानदंड बदलें",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "मूल्य सीमा",
     "products": "उत्पाद",
     "reset": "रीसेट करें",
