--- a/frontend/locales/pl.json
+++ b/frontend/locales/pl.json
@@ -1,13 +1,13 @@
 ﻿{
   "abc": {
-    "no_revenue": "Aucun revenu généré sur la période.",
-    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+    "no_revenue": "Brak wygenerowanego przychodu w tym okresie.",
+    "not_enough_data": "Niewystarczająca ilość danych sprzedażowych do analizy ABC."
   },
   "accounting": {
     "amount": "Kwota",
     "amount_placeholder": "0.00",
-    "articles_count": "{{count}} articles",
-    "articles_short": "{{count}} art.",
+    "articles_count": "{{count}} artykułów",
+    "articles_short": "{{count}} szt.",
     "avg_sale": "Średni koszyk: {{value}}",
     "category": "Kategoria",
     "client_diverse": "Klient różny",
@@ -23,9 +23,9 @@
     "default_address": "Adres niepodany",
     "default_store_name": "Mój Sklep Stock",
     "delete_error": "Błąd usuwania",
-    "description_optional": "Description (facultatif)",
-    "details_placeholder": "Détails de la dépense...",
-    "expense_lines": "{{count}} lignes de frais",
+    "description_optional": "Opis (opcjonalnie)",
+    "details_placeholder": "Szczegóły wydatku...",
+    "expense_lines": "{{count}} pozycji kosztowych",
     "expenses": "Wydatki",
     "expenses_categories": {
       "rent": "Czynsz",
@@ -44,56 +44,56 @@
     "invalid_amount": "Nieprawidłowa kwota",
     "invoice_title": "FAKTURA",
     "items_sold": "Sprzedanych sztuk",
-    "last_days_label": "{{count}} derniers jours",
-    "loss_details": "Détails des pertes",
+    "last_days_label": "Ostatnie {{count}} dni",
+    "loss_details": "Szczegóły strat",
     "loss_reasons": "{{count}} przyczyn(a) strat",
     "losses": "Straty / Uszkodzenia",
-    "margin": "Marge",
+    "margin": "Marża",
     "margin_on_sales": "Marża brutto",
     "margin_on_sales_info": "Różnica między ceną sprzedaży a kosztem zakupu.",
     "margin_percentage": "Marża: {{percentage}}%",
     "net_profit": "Zysk netto",
     "net_profit_info": "Rzeczywisty zysk po odliczeniu wszystkich wydatków.",
-    "new_expense": "Nouvelle dépense",
-    "new_invoice": "Facture",
+    "new_expense": "Nowy wydatek",
+    "new_invoice": "Faktura",
     "no_expenses": "Brak wydatków",
-    "no_sales": "Aucune vente sur cette période",
+    "no_sales": "Brak sprzedaży w tym okresie",
     "payment_card": "Karta",
     "payment_cash": "Gotówka",
     "payment_credit": "Kredyt klienta",
     "payment_methods": "Sprzedaż wg metody płatności",
     "payment_mobile_money": "Pieniądz mobilny",
     "payment_transfer": "Przelew",
-    "pdf_expenses_detail": "Détail des Charges",
-    "pdf_generation_error": "Erreur lors de la génération du rapport",
-    "pdf_gross_margin": "Marge brute",
-    "pdf_no_address": "Adresse non renseignée",
-    "pdf_no_expenses": "Aucune dépense sur cette période",
-    "pdf_top_products": "Top 10 Produits par Performance",
-    "pdf_total_expenses": "Total charges",
-    "pdf_total_revenue": "CA total",
+    "pdf_expenses_detail": "Szczegóły wydatków",
+    "pdf_generation_error": "Błąd podczas generowania raportu",
+    "pdf_gross_margin": "Marża brutto",
+    "pdf_no_address": "Adres nie został podany",
+    "pdf_no_expenses": "Brak wydatków w tym okresie",
+    "pdf_top_products": "Top 10 najlepiej sprzedających się produktów",
+    "pdf_total_expenses": "Suma wydatków",
+    "pdf_total_revenue": "Przychód całkowity",
     "period_label": "Okres:",
-    "product": "Produit",
-    "product_performance": "Performance par Produit",
+    "product": "Produkt",
+    "product_performance": "Wydajność produktu",
     "purchases_count": "{{count}} zamówień(e)",
     "recent_sales": "Ostatnie sprzedaże",
     "recipient_label": "Odbiorca:",
-    "report": "Rapport",
+    "report": "Raport",
     "report_gen_error": "Błąd podczas generowania raportu",
     "report_generation_error": "Błąd podczas generowania raportu",
     "report_title": "RAPORT DZIAŁALNOŚCI",
     "revenue": "Przychód",
-    "revenue_breakdown": "Répartition du CA",
+    "revenue_breakdown": "Podział przychodów",
     "revenue_info": "Całkowity przychód ze sprzedaży przed odliczeniem wydatków.",
-    "revenue_trend": "Évolution du CA",
-    "sales_count_value": "{{count}} ventes",
+    "revenue_trend": "Trend przychodów",
+    "sales_count_value": "{{count}} sprzedaży",
     "save_error": "Błąd zapisu",
     "see_other_expenses": "Pokaż jeszcze {{count}}",
-    "see_other_products": "Voir les {{count}} autres produits",
+    "see_other_products": "Zobacz {{count}} innych produktów",
     "share_email_body": "Dzień dobry, w załączeniu przesyłamy fakturę na kwotę {{amount}} ze sklepu {{store}}.",
     "share_email_subject": "Faktura {{client}}",
     "share_whatsapp_text": "Dzień dobry, oto faktura na kwotę {{amount}} dla {{client}}.",
-    "sold": "Vendu",
+    "sold": "Sprzedane",
     "stock_value_purchase": "Wartość zapasów (koszt)",
     "stock_value_selling": "Wartość sprzedaży: {{value}}",
     "supplier_purchases": "Zakupy od dostawców",
@@ -103,167 +103,167 @@
     "total_revenue_kpi": "Przychód ogółem"
   },
   "activity": {
-    "no_activity": "Aucune activité enregistrée",
-    "subtitle": "Suivi des actions de votre équipe",
-    "title": "Historique d'Activité"
+    "no_activity": "Brak zarejestrowanej aktywności",
+    "subtitle": "Śledzenie działań Twojego zespołu",
+    "title": "Historia aktywności"
   },
   "admin": {
     "actions": {
-      "confirm": "Confirmation",
-      "cancel": "Annuler",
-      "success": "Succès",
-      "error": "Erreur",
-      "sendSuccess": "✅ Envoyé",
-      "statusUpdated": "✅ Statut mis à jour"
+      "confirm": "Potwierdzenie",
+      "cancel": "Anuluj",
+      "success": "Sukces",
+      "error": "Błąd",
+      "sendSuccess": "✅ Wysłano",
+      "statusUpdated": "✅ Status został zaktualizowany"
     },
     "alerts": {
-      "title": "Alertes",
-      "openTickets": "Tickets ouverts",
-      "lowStock": "Stock bas",
-      "recentSignups": "Inscriptions 7j"
+      "title": "Alerty",
+      "openTickets": "Otwarte zgłoszenia",
+      "lowStock": "Niski stan magazynowy",
+      "recentSignups": "Rejestracje (7 dni)"
     },
     "comms": {
-      "newMsg": "Nouveau Message",
-      "target": "Cible:",
-      "send": "Envoyer",
-      "broadcast": "Diffuser",
-      "history": "Historique",
-      "broadcastSuccess": "📢 Diffusion : Envoyé à {{count}} appareils"
+      "newMsg": "Nowa wiadomość",
+      "target": "Cel:",
+      "send": "Wyślij",
+      "broadcast": "Transmituj (Broadcast)",
+      "history": "Historia",
+      "broadcastSuccess": "📢 Transmisja: Wysłano do {{count}} urządzeń"
     },
-    "dashboard": "Tableau de Bord Admin",
+    "dashboard": "Panel Administratora",
     "disputes": {
-      "title": "Litiges",
-      "investigate": "Enquêter",
-      "resolve": "Résoudre",
-      "reject": "Rejeter",
-      "resolution": "RÉSOLUTION :",
-      "adminNotes": "NOTES ADMIN :"
+      "title": "Spory",
+      "investigate": "Zbadaj",
+      "resolve": "Rozwiąż",
+      "reject": "Odrzuć",
+      "resolution": "ROZWIĄZANIE:",
+      "adminNotes": "NOTATKI ADMINA:"
     },
     "distribution": {
-      "country": "Répartition par pays",
-      "role": "Utilisateurs par rôle"
+      "country": "Podział według krajów",
+      "role": "Użytkownicy według ról"
     },
     "health": {
-      "title": "Santé Système",
-      "database": "Base de données",
-      "online": "EN LIGNE",
-      "error": "ERREUR",
-      "version": "Version {{version}}"
+      "title": "Stan Systemu",
+      "database": "Baza danych",
+      "online": "ONLINE",
+      "error": "BŁĄD",
+      "version": "Wersja {{version}}"
     },
     "logs": {
-      "title": "Logs"
+      "title": "Logi"
     },
     "placeholders": {
-      "searchUsers": "Rechercher un utilisateur...",
-      "searchStores": "Rechercher un magasin...",
-      "searchProducts": "Rechercher un produit...",
-      "searchCustomers": "Rechercher un client...",
-      "msgTitle": "Titre du message",
-      "msgContent": "Contenu du message...",
-      "targetUserId": "ID Utilisateur (ex: user_...)",
-      "replyPlaceholder": "Votre réponse...",
-      "resolutionPlaceholder": "Résolution (facultatif)...",
-      "adminNotesPlaceholder": "Notes administratives..."
+      "searchUsers": "Szukaj użytkownika...",
+      "searchStores": "Szukaj sklepu...",
+      "searchProducts": "Szukaj produktu...",
+      "searchCustomers": "Szukaj klienta...",
+      "msgTitle": "Tytuł wiadomości",
+      "msgContent": "Treść wiadomości...",
+      "targetUserId": "ID użytkownika (np. user_...)",
+      "replyPlaceholder": "Twoja odpowiedź...",
+      "resolutionPlaceholder": "Rozwiązanie (opcjonalnie)...",
+      "adminNotesPlaceholder": "Notatki administratora..."
     },
     "retention": {
-      "title": "Rétention",
-      "deletedTotal": "Supprimés (Total)",
-      "inactive30": "Inactifs (>30j)"
+      "title": "Retencja",
+      "deletedTotal": "Usunięte (Suma)",
+      "inactive30": "Nieaktywni (>30 dni)"
     },
     "revenue": {
-      "title": "Revenus",
-      "today": "Aujourd'hui",
-      "week": "7 jours",
-      "month": "30 jours"
+      "title": "Przychody",
+      "today": "Dzisiaj",
+      "week": "7 dni",
+      "month": "30 dni"
     },
     "security": {
-      "failed24h": "Échecs 24h",
-      "success24h": "Connexions 24h",
-      "blocked": "Bloqués",
-      "events": "Événements"
+      "failed24h": "Niepowodzenia (24h)",
+      "success24h": "Połączenia (24h)",
+      "blocked": "Zablokowani",
+      "events": "Zdarzenia"
     },
     "segments": {
-      "global": "Global",
-      "users": "Utilisateurs",
-      "stores": "Magasins",
-      "stock": "Gestion Stock",
-      "finance": "Finance",
+      "global": "Globalny",
+      "users": "Użytkownicy",
+      "stores": "Sklepy",
+      "stock": "Zarządzanie magazynem",
+      "finance": "Finanse",
       "crm": "CRM",
-      "support": "Support",
-      "disputes": "Litiges",
-      "comms": "Communication",
-      "security": "Sécurité",
-      "logs": "Journal Activité",
-      "settings": "Paramètres",
-      "cgu": "CGU",
-      "privacy": "Confidentialité"
+      "support": "Wsparcie",
+      "disputes": "Spory",
+      "comms": "Komunikacja",
+      "security": "Bezpieczeństwo",
+      "logs": "Dziennik aktywności",
+      "settings": "Ustawienia",
+      "cgu": "Regulamin",
+      "privacy": "Prywatność"
     },
     "settings": {
-      "config": "Configuration",
-      "appVersion": "Version de l'app",
-      "serverStatus": "Statut du serveur",
-      "actions": "Actions",
-      "dataExplorer": "📊 Explorateur de Données (MongoDB)"
+      "config": "Konfiguracja",
+      "appVersion": "Wersja aplikacji",
+      "serverStatus": "Status serwera",
+      "actions": "Akcje",
+      "dataExplorer": "📊 Eksplorator danych (MongoDB)"
     },
     "stock": {
-      "title": "Produits",
-      "units": "{{count}} unités",
-      "seller": "Vendeur",
-      "deleteConfirmTitle": "⚠️ Suppression Définitive",
-      "deleteConfirmDesc": "Voulez-vous vraiment supprimer le produit \"{{name}}\" ? Cette action est irréversible."
+      "title": "Produkty",
+      "units": "{{count}} jednostek",
+      "seller": "Sprzedawca",
+      "deleteConfirmTitle": "⚠️ Trwałe usuwanie",
+      "deleteConfirmDesc": "Czy na pewno chcesz usunąć produkt „{{name}}”? Tej akcji nie można cofnąć."
     },
     "stores": {
-      "title": "Magasins",
-      "owner": "Propriétaire",
-      "products": "Produits",
-      "sales": "Ventes"
+      "title": "Sklepy",
+      "owner": "Właściciel",
+      "products": "Produkty",
+      "sales": "Sprzedaż"
     },
     "support": {
-      "title": "Tickets",
-      "filterAll": "Tous",
-      "filterOpen": "Ouverts",
-      "filterPending": "En attente",
-      "filterClosed": "Fermés",
-      "reply": "Répondre",
-      "close": "Fermer"
+      "title": "Zgłoszenia",
+      "filterAll": "Wszystko",
+      "filterOpen": "Otwarte",
+      "filterPending": "En oczekiwaniu",
+      "filterClosed": "Zamknięte",
+      "reply": "Odpowiedz",
+      "close": "Zamknij"
     },
     "topStores": {
-      "title": "Top Magasins"
+      "title": "Najlepsze sklepy"
     },
     "users": {
-      "title": "Utilisateurs",
-      "filterAll": "Tous",
-      "filterShopkeepers": "Commerçants",
-      "filterStaff": "Staff",
-      "filterSuppliers": "Fournisseurs",
-      "filterAdmins": "Admins",
-      "banConfirm": "Bannir cet utilisateur ?",
-      "banDesc": "{{name}} ne pourra plus se connecter.",
-      "banBtn": "Bannir",
-      "reactivateBtn": "Réactiver",
-      "active": "Actif",
-      "banned": "Banni",
-      "countryLabel": "Pays: {{country}}"
+      "title": "Użytkownicy",
+      "filterAll": "Wszystko",
+      "filterShopkeepers": "Sprzedawcy",
+      "filterStaff": "Personel",
+      "filterSuppliers": "Dostawcy",
+      "filterAdmins": "Administratorzy",
+      "banConfirm": "Zablokować tego użytkownika?",
+      "banDesc": "{{name}} nie będzie już mógł się zalogować.",
+      "banBtn": "Zablokuj",
+      "reactivateBtn": "Aktywuj ponownie",
+      "active": "Aktywny",
+      "banned": "Zablokowany",
+      "countryLabel": "Kraj: {{country}}"
     }
   },
   "ai": {
-    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
-    "persona_name": "Assistant Stockman",
-    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
-    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
-    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
-    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
-    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
-    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "daily_summary_prompt": "Jesteś Stockman AI. Oto dzisiejsze działania: {activity}. Zrób bardzo krótkie (3-4 zdania) i motywujące podsumowanie dla sprzedawcy.",
+    "persona_name": "Asystent Stockman",
+    "replenishment_advice_prompt": "Jesteś ekspertem ds. logistyki. Oto krytyczne produkty: {products}. Podaj rady dotyczące uzupełniania zapasów na podstawie ostatniej sprzedaży.",
+    "summary_goal": "Twoim celem jest pomoc użytkownikowi w poruszaniu się po aplikacji ORAZ analizie jego działań.",
+    "summary_instruction_admin": "JEŚLI UŻYTKOWNIK JEST ADMINEM, ROZPOCZNIJ SWOJĄ PIERWSZĄ ODPOWIEDŹ OD KRÓTKIEGO PODSUMOWANIA STANU SYSTEMU, JEŚLI WYSTĘPUJĄ ALERTY.",
+    "summary_role_admin": "Jesteś osobistym asystentem ADMINISTRATORA Stockman. Masz dostęp do globalnych metryk.",
+    "summary_role_merchant": "Jesteś inteligentnym, eksperckim asystentem aplikacji Stockman dla sprzedawców.",
+    "summary_tone": "Przyjmij ton pedagogiczny, profesjonalny i serdeczny. Twoje odpowiedzi muszą być kompletne i wyjaśniające.",
     "tools": {
       "inventory_alerts": {
-        "empty": "Aucune alerte de stock critique.",
-        "format": "{name}: Stock={quantity} (Min={min_stock})"
+        "empty": "Brak krytycznych alertów zapasów.",
+        "format": "{name}: Stan={quantity} (Min={min_stock})"
       },
       "system_alerts": {
-        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
-        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
-        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+        "empty": "Stan systemu administracyjnego jest doskonały. Brak krytycznych alertów.",
+        "critical_login": "KRYTYCZNE: Wykryto {count} nieudanych prób logowania w ciągu 24h. Ryzyko ataku Brute-force.",
+        "support_backlog": "ALERT: Wysokie zaległości w zgłoszeniach wsparcia ({count} otwartych zgłoszeń)."
       },
       "product_info": {
         "not_found": "Aucun produit trouvé pour '{name}'.",
@@ -1222,6 +1222,8 @@
     "min_price": "Min",
     "min_rating": "Minimalna ocena",
     "modify_criteria": "Zmień kryteria wyszukiwania",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Zakres cenowy",
     "products": "Produkty",
     "reset": "Resetuj",
@@ -1682,27 +1684,27 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "birthdays_desc": "Prévenir X jours avant",
-    "birthdays_label": "Anniversaires clients",
-    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
-    "client_reactivation_label": "Réactivation clients",
-    "debt_recovery_desc": "Dettes clients dépassant le seuil",
-    "debt_recovery_label": "Recouvrement de dettes",
-    "dormant_products_desc": "Produits sans vente depuis X jours",
-    "dormant_products_label": "Produits dormants",
-    "expense_spike_desc": "Alerte si +X% vs mois précédent",
-    "expense_spike_label": "Hausse des dépenses",
-    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
-    "inventory_check_label": "Vérification inventaire",
-    "late_deliveries_desc": "Critique après X jours de retard",
-    "late_deliveries_label": "Livraisons en retard",
-    "monthly_report_desc": "X derniers jours du mois",
-    "monthly_report_label": "Rapport mensuel",
-    "pending_invitations_desc": "En attente depuis X jours",
-    "pending_invitations_label": "Invitations en attente",
-    "replenishment_desc": "Produits sous le stock minimum",
-    "replenishment_label": "Réapprovisionnement",
-    "unit_days": "jours"
+    "birthdays_desc": "Powiadomienie o nadchodzących urodzinach klientów",
+    "birthdays_label": "Urodziny",
+    "client_reactivation_desc": "Alert, jeśli klient VIP nie wrócił",
+    "client_reactivation_label": "Reaktywacja klienta",
+    "debt_recovery_desc": "Przypomnienie, jeśli dług klienta przekracza kwotę",
+    "debt_recovery_label": "Odzyskiwanie długów",
+    "dormant_products_desc": "Alert, jeśli produkt nie został sprzedany od dłuższego czasu",
+    "dormant_products_label": "Produakty nieaktywne",
+    "expense_spike_desc": "Alert, jeśli wydatki gwałtownie wzrosną",
+    "expense_spike_label": "Skok wydatków",
+    "inventory_check_desc": "Przypomnienie o sprawdzeniu stanu fizycznego produktu",
+    "inventory_check_label": "Przegląd zapasów",
+    "late_deliveries_desc": "Alert, jeśli dostawa od dostawcy przekracza termin",
+    "late_deliveries_label": "Opóźnione dostawy",
+    "monthly_report_desc": "Dostępność miesięcznego podsumowania księgowego",
+    "monthly_report_label": "Raport miesięczny",
+    "pending_invitations_desc": "Przypomnienie o niezaakceptowanych zaproszeniach zespołu",
+    "pending_invitations_label": "Oczekujące zaproszenia",
+    "replenishment_desc": "Sugestie zakupu oparte na brakach",
+    "replenishment_label": "Uzupełnianie zapasów",
+    "unit_days": "dni"
   },
   "settings": {
     "about": "O aplikacji",
