--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -1222,6 +1222,8 @@
     "min_price": "Mín",
     "min_rating": "Calificación mínima",
     "modify_criteria": "Modifique sus criterios de búsqueda",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Rango de precios",
     "products": "Productos",
     "reset": "Reiniciar",
