--- a/frontend/locales/it.json
+++ b/frontend/locales/it.json
@@ -1193,6 +1193,8 @@
     "min_price": "Min",
     "min_rating": "Valutazione minima",
     "modify_criteria": "Modifica i criteri di ricerca",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Fascia di prezzo",
     "products": "Prodotti",
     "reset": "Reimposta",
