--- a/frontend/locales/pt.json
+++ b/frontend/locales/pt.json
@@ -1222,6 +1222,8 @@
     "min_price": "Mín",
     "min_rating": "Classificação mínima",
     "modify_criteria": "Modifique os seus critérios de pesquisa",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Faixa de preço",
     "products": "Produtos",
     "reset": "Reiniciar",
