--- a/frontend/locales/ru.json
+++ b/frontend/locales/ru.json
@@ -1222,6 +1222,8 @@
     "min_price": "Мин",
     "min_rating": "Минимальный рейтинг",
     "modify_criteria": "Измените критерии поиска",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Диапазон цен",
     "products": "Товары",
     "reset": "Сбросить",
