--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -1222,6 +1222,8 @@
     "min_price": "Lu néew",
     "min_rating": "Note bi gën a néew",
     "modify_criteria": "Soppi sa seet-seet",
+    "order_sent_description": "Commande fournisseur {order_id} envoyée ({count} articles)",
+    "order_sent_message": "Commande envoyée au fournisseur",
     "price_range": "Njeeg bi",
     "products": "Liggéey yi",
     "reset": "Faraat",
